# BioCausalCalib

./: .gitignore  AGENTS.md  BioCausalCalib_Project_Plan.md  Makefile  README.md  pyproject.toml
biocausalcalib/: __init__.py  cli.py  loader.py  schemas.py
data/: _candidates_rwe.jsonl  biocausalcalib_v0_seed.jsonl  draft_items_008-015.jsonl  parked_items.jsonl
data/_archive_old_schema/: draft_items_016-023.jsonl  draft_items_024-026.jsonl  draft_items_027-034.jsonl  sample_items.jsonl
docs/: failure_modes.md
review/: rwe_answer_key.md  rwe_blind_worksheet.md
tests/: test_loader.py  test_schemas.py
